add jar and command line args